--- a/src/Components/UsersList/styling.css
+++ b/src/Components/UsersList/styling.css
@@ -3,6 +3,7 @@
     padding: 1rem;
 }
 
+
 .new-list-container {
     padding: 1rem;
 }
@@ -20,6 +21,7 @@
     width: 100px;
 }
 
+
 .list-title-container, .addFilmToList-container {
     padding: 0.5rem;
     place-content: center;
@@ -33,6 +35,7 @@
     position: sticky;
     top: 14%;
     margin-right: 1rem;
+    z-index: 2;
 }
 
 
@@ -194,6 +197,7 @@
 .list-page-list {
     margin: 0;
     padding: 0;
+    z-index: 0;
 }
 
 .list-page-list > .list-image-container {
@@ -229,6 +233,9 @@
 .list-page-list-item {
     cursor: pointer;
     position: relative;
+    z-index: 1;
+    display: flex;
+    flex-direction: row;
 }
 
 
