--- a/src/styling/dashboard.css
+++ b/src/styling/dashboard.css
@@ -127,12 +127,13 @@
 .search-results-container-dashboard-mobile {
     height: fit-content;
     width: 100%;
-    margin-top: 2.5rem;
+    margin-top: 0.5rem;
 }
 
 .search-results-list-dashboard {
     padding: 1rem;
     background-color: #FF5733;
+    border-radius: 20px;
 }
 
 .nav-bar-list-container {
@@ -201,8 +202,7 @@
     .app-container {
         grid-template: 
         'header' 7rem
-        'main' 1fr
-        'footer' 40rem/
+        'main' 1fr/
         1fr;
     }
     .header {
