--- a/src/styling/dashboard.css
+++ b/src/styling/dashboard.css
@@ -214,7 +214,7 @@
     }
 
     .left-sidebar {
-        display: none;
+        display: none !important;
     }
 
     .drop-down-menu-container {
@@ -244,6 +244,6 @@
         gap: 2rem !important;
     }
     .footer {
-        display: none;
+        display: none !important;
     }
 }
